feat: consultas até o 7

--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "<Graph identifier=N2c07585ef5a2488dbe3a9d8733252336 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,25 @@
     "# Relaciona com a especie PantheraLeo\n",
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#vacinaDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PantheraLeo\")))\n",
     "# Adiciona o temVacina\n",
-    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PantheraLeo\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVacina\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\")))\n"
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PantheraLeo\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVacina\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\")))\n",
+    "\n",
+    "# Faz as relações entre RabiesVirus e Febre\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temSintoma\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Febre\")))\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Febre\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#sintomaDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n",
+    "# Faz as relações entre RabiesVirus e Tosse\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temSintoma\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tosse\")))\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tosse\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#sintomaDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n",
+    "\n",
+    "# Faz o contato direto entre Leao e Tigre\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temContatoDiretoCom\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\")))\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temContatoDiretoCom\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao\")))\n",
+    "\n",
+    "# Relaciona o RabiesVirus com o Leao, virus virusDe host e host temVirus virus\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#virusDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao\")))\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n",
+    "# Relaciona o RabiesVirus com o Tigre, virus virusDe host e host temVirus virus\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#virusDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\")))\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n"
    ]
   },
   {
@@ -496,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -509,37 +527,19 @@
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#SARS-CoV-2'),)\n",
       "----------Consulta 2----------\n",
-      "----------Consulta 3----------\n"
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
+      "----------Consulta 3----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Febre'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tosse'),)\n",
+      "----------Consulta 4----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre'),)\n",
+      "----------Consulta 5----------\n"
      ]
     }
    ],
    "source": [
-    "# 30 consultas SPARQL Query, usando a biblioteca rdflib\n",
-    "\n",
-    "'''especieDe\n",
-    "pertenceAoFilo\n",
-    "pertenceAoReino\n",
-    "sintomaDe\n",
-    "temContatoDiretoCom\n",
-    "temEspecie\n",
-    "temSintoma\n",
-    "temVacina\n",
-    "temVirus\n",
-    "vacinaDe\n",
-    "virusDe\n",
-    "\n",
-    "# Classes\n",
-    "cellular organisms\n",
-    "Host\n",
-    "Reino\n",
-    "Sintoma\n",
-    "Vacina\n",
-    "Viruses\n",
-    "foaf:Agent\n",
-    "foaf:Document\n",
-    "foaf:Group\n",
-    "foaf:Organization\n",
-    "foaf:Person'''\n",
+    "# 0-5 consultas SPARQL Query, usando a biblioteca rdflib\n",
     "\n",
     "# 1 - Listar todas as espécies presentes na ontologia:\n",
     "\n",
@@ -580,15 +580,99 @@
     "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
     "SELECT DISTINCT ?vacina\n",
     "WHERE {\n",
-    "  ?vacina a :vacinaDe .\n",
-    "  ?vacina :temVacina ?especie .\n",
+    "  ?vacina :vacinaDe ?especie .\n",
+    "  ?especie :temVacina ?vacina .\n",
     "}\n",
     "\"\"\"\n",
     "\n",
     "for row in onto.query(query):\n",
     "    print(row)\n",
     "\n",
-    "print(\"----------Consulta 3----------\")\n"
+    "print(\"----------Consulta 3----------\")\n",
+    "\n",
+    "# 4 - Encontrar os sintomas causados por um determinado vírus:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?sintoma\n",
+    "WHERE {\n",
+    "  ?sintoma :sintomaDe ?virus .\n",
+    "  ?virus :temSintoma ?sintoma .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 4----------\")\n",
+    "\n",
+    "# 5 - Listar todos os hosts que tem contato direto com um determinado host:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?host\n",
+    "WHERE {\n",
+    "  ?host :temContatoDiretoCom ?host2 .\n",
+    "  ?host2 :temContatoDiretoCom ?host .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 5----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "----------Consulta 6----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
+      "----------Consulta 7----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 - 10 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 6 - Listar todos os vírus que têm uma determinada espécie:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?virus\n",
+    "WHERE {\n",
+    "    ?virus :virusDe ?host .\n",
+    "    ?host :especieDe ?especie .\n",
+    "    ?especie a :Especie .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 6----------\")\n",
+    "\n",
+    "# 7 - Listar todas as VacinaViralAtenuada disponíveis na ontologia\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    ?vacina a :VacinaViralAtenuada .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 7----------\")"
    ]
   }
  ],
