feat: consultas até o 10

--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,26 @@
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
       "----------Consulta 6----------\n",
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
-      "----------Consulta 7----------\n"
+      "----------Consulta 7----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PantheraLeo'),)\n",
+      "----------Consulta 8----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Rhizidiovirus'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DNA_viruses'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#SARS-CoV-2'),)\n",
+      "----------Consulta 9----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Rhizidiovirus'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DNA_viruses'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#SARS-CoV-2'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#unidentified_rumen_bacterium_RFN45'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_IcB1'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_ALO1_GLFRUDD03F4KLC'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_BD_contig02109'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_Contig22807'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_ALO1_GLFRUDD03GHITS'),)\n",
+      "----------Consulta 10----------\n"
      ]
     }
    ],
@@ -672,7 +691,55 @@
     "for row in onto.query(query):\n",
     "    print(row)\n",
     "\n",
-    "print(\"----------Consulta 7----------\")"
+    "print(\"----------Consulta 7----------\")\n",
+    "\n",
+    "# 8 - Listar todos os hosts que têm uma determinada vacina\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?host\n",
+    "WHERE {\n",
+    "    ?host :temVacina ?vacina .\n",
+    "    ?vacina a :VacinaViralAtenuada .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 8----------\")\n",
+    "\n",
+    "# 9 - Listar todos os virus da ontologia, limitar a 10 resultados\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?virus\n",
+    "WHERE {\n",
+    "    ?virus a :Viruses .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 9----------\")\n",
+    "\n",
+    "# 10 - Lista todas as instancias de virus que são de uma classe que tem como superclasse a classe Viruses\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?virus\n",
+    "WHERE {\n",
+    "    ?virus a/rdfs:subClassOf* :Viruses .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 10----------\")\n"
    ]
   }
  ],
