feat: consultas até o 20

--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N5270b24ed29b4ab1a4fc1df43a2820fa (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N27507930809143259c430d58986854da (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N2c07585ef5a2488dbe3a9d8733252336 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N27507930809143259c430d58986854da (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,46 @@
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n",
     "# Relaciona o RabiesVirus com o Tigre, virus virusDe host e host temVirus virus\n",
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#virusDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\")))\n",
-    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n"
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#temVirus\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus\")))\n",
+    "\n",
+    "# Cria uma relação de vacina com :foaf:Group criadaPeloGrupo\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPeloGrupo\"), URIRef(\"http://xmlns.com/foaf/0.1/Group\")))\n",
+    "\n",
+    "# Cria o Grupo Instituto Pasteur\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/InstitutoPasteur\"), RDF.type, URIRef(\"http://xmlns.com/foaf/0.1/Group\")))\n",
+    "\n",
+    "# Relaciona a vacina antirrábica com o Instituto Pasteur\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPeloGrupo\"), URIRef(\"http://xmlns.com/foaf/0.1/InstitutoPasteur\")))\n",
+    "\n",
+    "# Cria a Person Louis Pasteur\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/LouisPasteur\"), RDF.type, URIRef(\"http://xmlns.com/foaf/0.1/Person\")))\n",
+    "\n",
+    "# Cria a relação criadaPor entre vacina e Person\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Vacina\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPor\"), URIRef(\"http://xmlns.com/foaf/0.1/Person\")))\n",
+    "\n",
+    "# Cria a relação de vacina com :foaf:Person criadaPor\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPor\"), URIRef(\"http://xmlns.com/foaf/0.1/Person\")))\n",
+    "# Relaciona a vacina antirrábica com Louis Pasteur\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPor\"), URIRef(\"http://xmlns.com/foaf/0.1/LouisPasteur\")))\n",
+    "\n",
+    "# Cria a organização Pfizer-BioNTech\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/Pfizer-BioNTech\"), RDF.type, URIRef(\"http://xmlns.com/foaf/0.1/Organization\")))\n",
+    "\n",
+    "# Cria a relação de vacina com :foaf:Organization criadaPelaOrganizacao\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPelaOrganizacao\"), URIRef(\"http://xmlns.com/foaf/0.1/Organization\")))\n",
+    "# Relaciona a vacina antirrábica com a Pfizer-BioNTech\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPelaOrganizacao\"), URIRef(\"http://xmlns.com/foaf/0.1/Pfizer-BioNTech\")))\n",
+    "\n",
+    "# Cria a Person Jonas Salk\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk\"), RDF.type, URIRef(\"http://xmlns.com/foaf/0.1/Person\")))\n",
+    "# Adiciona o nome Jonas Salk\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk\"), URIRef(\"http://xmlns.com/foaf/0.1/name\"), Literal(\"Jonas Salk\")))\n",
+    "# Cria a instancia da vacina Vacina contra a poliomielite\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite\"), RDF.type, URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaViralInativada\")))\n",
+    "# Relaciona com a instancia da Person Jonas Salk\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#criadaPor\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk\")))\n",
+    "# Relaciona com a instancia da especie PantheraLeo\n",
+    "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#vacinaDe\"), URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PantheraLeo\")))\n"
    ]
   },
   {
@@ -539,7 +578,7 @@
     }
    ],
    "source": [
-    "# 0-5 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "# 1-5 consultas SPARQL Query, usando a biblioteca rdflib\n",
     "\n",
     "# 1 - Listar todas as espécies presentes na ontologia:\n",
     "\n",
@@ -659,7 +698,7 @@
     }
    ],
    "source": [
-    "# 5 - 10 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "# 6 - 10 consultas SPARQL Query, usando a biblioteca rdflib\n",
     "\n",
     "# 6 - Listar todos os vírus que têm uma determinada espécie:\n",
     "\n",
@@ -740,6 +779,263 @@
     "    print(row)\n",
     "\n",
     "print(\"----------Consulta 10----------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#unidentified_rumen_bacterium_RFN45'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_IcB1'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_ALO1_GLFRUDD03F4KLC'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_BD_contig02109'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_Contig22807'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_ALO1_GLFRUDD03GHITS'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_BD_contig03248'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#bacterium_enrichment_culture_clone_ALO1_GLFRUDD03FKWD6'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#archaeon_enrichment_culture_clone_A21D11'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#uncultured_bacterium_N271E'),)\n",
+      "----------Consulta 11----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre'),)\n",
+      "----------Consulta 12----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Febre'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DorDeGarganta'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DorDeCabeca'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#PerdaDePaladar'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DorNoCorpo'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#DificuldadeDeRespirar'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tosse'),)\n",
+      "----------Consulta 13----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
+      "----------Consulta 14----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
+      "----------Consulta 15----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11 - 15 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 11 - Listar todas as instancias de cellula_organisms que são de uma classe que tem como superclasse a classe cellular_organisms\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?cellula_organisms\n",
+    "WHERE {\n",
+    "    ?cellula_organisms a/rdfs:subClassOf* :cellular_organisms .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 11----------\")\n",
+    "\n",
+    "# 12 - Listar todos os hosts da ontologia, limitar a 10 resultados\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?host\n",
+    "WHERE {\n",
+    "    ?host a :Host .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 12----------\")\n",
+    "\n",
+    "# 13 - Listar todas as instancias de Sintoma que são de uma classe que tem como superclasse a classe Sintoma\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?sintoma\n",
+    "WHERE {\n",
+    "    ?sintoma a/rdfs:subClassOf* :Sintoma .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 13----------\")\n",
+    "\n",
+    "# 14 - Listar todas as vacinas que foram desenvolvidas por um determinado grupo:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    ?vacina foaf:criadaPeloGrupo ?grupo .\n",
+    "    ?grupo a foaf:Group .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 14----------\")\n",
+    "\n",
+    "# 15 - Encontrar todas as vacinas que foram desenvolvidas por uma determinada pessoa:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    ?vacina foaf:criadaPor ?pessoa .\n",
+    "    ?pessoa a foaf:Person .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 15----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica'),)\n",
+      "----------Consulta 16----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite'),)\n",
+      "----------Consulta 17----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite'),)\n",
+      "----------Consulta 18----------\n",
+      "(rdflib.term.URIRef('http://www.w3.org/1999/02/22-rdf-syntax-ns#type'),)\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/name'),)\n",
+      "----------Consulta 19----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Salmonella_phage_PSP222'),)\n",
+      "----------Consulta 20----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 16 - 20 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 16 - Listar todas as vacinas que foram desenvolvidas por uma determinada organização ou grupo:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    {\n",
+    "        ?vacina foaf:criadaPelaOrganizacao ?organizacao .\n",
+    "        ?organizacao a foaf:Organization .\n",
+    "    }\n",
+    "    UNION\n",
+    "    {\n",
+    "        ?vacina foaf:criadaPeloGrupo ?grupo .\n",
+    "        ?grupo a foaf:Group .\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 16----------\")\n",
+    "\n",
+    "# 17 - Lista todas as vacinas que foram desenvolvidas por uma determinada pessoa e não foram desenvolvidas por uma determinada organização ou grupo:\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    {\n",
+    "        ?vacina :criadaPor ?pessoa .\n",
+    "        ?pessoa a foaf:Person .\n",
+    "    }\n",
+    "    MINUS\n",
+    "    {\n",
+    "        ?vacina foaf:criadaPelaOrganizacao ?organizacao .\n",
+    "        ?organizacao a foaf:Organization .\n",
+    "    }\n",
+    "    MINUS\n",
+    "    {\n",
+    "        ?vacina foaf:criadaPeloGrupo ?grupo .\n",
+    "        ?grupo a foaf:Group .\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 17----------\")\n",
+    "\n",
+    "# 18 - Listas todas as vacinas do Jonas Salk\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?vacina\n",
+    "WHERE {\n",
+    "    ?vacina :criadaPor ?pessoa .\n",
+    "    ?pessoa a foaf:Person .\n",
+    "    ?pessoa foaf:name \"Jonas Salk\" .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 18----------\")\n",
+    "\n",
+    "# 19 - Monstra todas as propriedades do Jonas Salk\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT DISTINCT ?propriedade\n",
+    "WHERE {\n",
+    "    ?vacina :criadaPor ?pessoa .\n",
+    "    ?pessoa a foaf:Person .\n",
+    "    ?pessoa foaf:name \"Jonas Salk\" .\n",
+    "    ?pessoa ?propriedade ?valor .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 19----------\")\n",
+    "\n",
+    "\n",
+    "# 20 - Lista todas os virus que são instancias da classe Caudoviricetes\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?virus\n",
+    "WHERE {\n",
+    "    ?virus a :Caudoviricetes .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 20----------\")\n"
    ]
   }
  ],
