feat: consultas até 25

--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -1037,6 +1037,96 @@
     "\n",
     "print(\"----------Consulta 20----------\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "----------Consulta 21----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
+      "----------Consulta 22----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite'), rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk'))\n",
+      "----------Consulta 23----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 21 - 25 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 21 - Lista todas os virus que tenha o sintoma Tosse\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT DISTINCT ?virus\n",
+    "WHERE {\n",
+    "    ?virus :temSintoma :Tosse .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 21----------\")\n",
+    "\n",
+    "# 22 - Lista todas os virus que tenha o sintoma Febre e Tosse\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT ?virus\n",
+    "WHERE {\n",
+    "    ?virus :temSintoma :Febre .\n",
+    "    ?virus :temSintoma :Tosse .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 22----------\")\n",
+    "\n",
+    "# 23 - Traz a vacina e o seu criador\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT ?vacina ?criador\n",
+    "WHERE {\n",
+    "    ?vacina :criadaPor ?criador .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 23----------\")\n",
+    "\n",
+    "# 25 - Trazer todos os hosts que tem contato direto com o Leao ou Tigre\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT ?host\n",
+    "WHERE {\n",
+    "    {\n",
+    "        ?host :temContatoDiretoCom :Leao .\n",
+    "    }\n",
+    "    UNION\n",
+    "    {\n",
+    "        ?host :temContatoDiretoCom :Tigre .\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 25----------\")\n"
+   ]
   }
  ],
  "metadata": {
